<resources>
    <string name="app_name">BullKeeper</string>
    <string name="intro_text">Parental control tool focused on the management of the digital lifestyle of children/adolescents whose objective is to identify potentially violent situations and create an ecosystem that facilitates early detection of various disorders derived from an inadequate or unreliable use of technology. information.</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="sign_in_btn">Si gn in</string>
    <string name="sign_in_facebook">Log in through Facebook</string>
    <string name="forgot_password_btn">Did you forget your password?</string>
    <string name="forgot_password_send_email">Send</string>
    <string name="show_tutorial">Show Tutorial</string>
    <string name="btn_restart">Restart</string>
    <string name="btn_details">Details</string>
    <string name="btn_close">Close</string>
    <string name="sign_up_main_title">Register now</string>
    <string name="sign_up_back_to_login">Already a user? Log in now</string>
    <string name="create_account_btn">Create Account</string>
    <string name="email_address_hint">Email</string>
    <string name="repeat_email_address_hint">Repeat Email</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="birthday_hint">Birthday</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="tfno_hint">Tfno</string>
    <string name="tfno_prefix">+34 </string>
    <string name="school_hint">School</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="date_time_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="date_time_format_2">yyyy/MM/dd HH:mm:ss</string>
    <string name="date_format_server_response">yyyy/MM/dd</string>
    <string name="joda_local_time_format_server_response">HH:mm:ss.SSS</string>
    <string name="discard_changes_btn">Discard</string>
    <string name="save_changes_btn">Save</string>
    <string name="retry_again_btn">Retry Again</string>
    <string name="no_data_found">No Data Found</string>
    <string name="loading_data">Loading Data ...</string>
    <string name="make_a_search_to_see_results">Make a search to see results</string>
    <string name="generic_loading_text">Please wait ....</string>
    <string name="search_result_generic_hint">Enter text to see result</string>
    <string name="support_edit_weekly_frequency_label">Weekly Frequency</string>
    <string name="name_not_empty_error">You must specify your name</string>
    <string name="surname_not_empty_error">You must specify your last name</string>
    <string name="birthday_not_empty_error">You must specify your birthday</string>
    <string name="email_not_empty_error">You must specify your email</string>
    <string name="email_invalid_error">The email does not have the correct format</string>
    <string name="forms_is_not_valid">The information provided is not valid</string>
    <string name="repeat_email_invalid_error">The mail does not match</string>
    <string name="birthday_selected" formatted="false">%s (%d years)</string>
    <string name="school_not_empty_error">You must specify school</string>
    <string name="close_session_message">You have closed session.</string>
    <string name="account_is_not_activated">The account is not activated, please check your email to activate it.</string>
    <string name="account_pending_to_be_deleted">The account is pending to be deleted, check your email for more information</string>
    <string name="signup_in_progress">Sign up in progress, please wait ...</string>
    <string name="signup_success" formatted="true">%s, your account was created successfully, you must check your email to validate it.</string>
    <string name="tutorial_first_page_title">The ultimate parental control tool.</string>
    <string name="tutorial_first_page_content">Help in the digital education of children / adolescents, allowing to define daily habits of use and knowledge about their behavior in social media.</string>
    <string name="tutorial_second_page_title">Registration of Children</string>
    <string name="tutorial_second_page_content">Register the children to be monitored by the system</string>
    <string name="tutorial_third_page_title">Enable social media</string>
    <string name="tutorial_third_page_content">Enable access to the social media you want to monitor</string>
    <string name="tutorial_fourth_page_title">Activity in social media</string>
    <string name="tutorial_fourth_page_content">We obtain information about your activity in social media</string>
    <string name="tutorial_fifth_page_title">Four dimensions</string>
    <string name="tutorial_fifth_page_content">We determine its relationship with the different risk groups</string>
    <string name="login_screen_main_title">Login now</string>
    <string name="login_failed">Login Failed</string>
    <string name="forgot_password_screen_main_title">Did you forget your password?</string>
    <string name="delete_list_menu_item">Delete</string>
    <string name="disabled_list_menu_item">Disabled</string>
    <string name="undo_list_menu_item">Undo</string>
    <string name="alert_item_removed">The alert was removed</string>
    <string name="app_menu_user_profile">Profile</string>
    <string name="app_menu_settings">Settings</string>
    <string name="app_menu_how_its_work">How its work</string>
    <string name="app_menu_close_session">Close Session</string>
    <string name="app_menu_terms_of_service">Terms of Service</string>
    <string name="app_menu_privacy_policy">Privacy Policy</string>
    <string name="app_menu_about_the_developer">About the Developer</string>
    <string name="user_menu_showcase_description">Here you have the main options of the application, you will see results, generated alerts and the list of supervised children in the system</string>
    <string name="my_childs_showcase_description">Here you have the children you can tutor, you can access the details of them, in addition to registering a new one in the system</string>
    <string name="my_kids_title">My Kids</string>
    <string name="my_kids_content_description">My Kids</string>
    <string name="loading_information_of_children">Loading information of registered children</string>
    <string name="content_not_be_loaded">The content could not be loaded</string>
    <string name="remove_alert_confirm">Remove the alert?</string>
    <string name="alert_removed_successfully">Alert Removed successfully</string>
    <string name="alert_detail_message">Message</string>
    <string name="alert_detail_required_actions">Required Actions</string>
    <string name="kid_guardian_active_user" formatted="false">%s (You)</string>
    <string name="kid_guardian_user_no_confirmed" formatted="false">%s (pending invitation)</string>
    <string name="search_kids_hint">Find children from your name</string>
    <string name="alert_category_success_text">Success data</string>
    <string name="alert_category_info_text">Informative data</string>
    <string name="alert_category_warning_text">important announcement</string>
    <string name="alert_category_danger_text">important information</string>
    <string name="my_alerts">My Alerts</string>
    <string name="filter_alerts_count_preference_summary">Number of alerts to be displayed.</string>
    <string name="filter_age_of_alerts_preference_summary">Age of alerts to show.</string>
    <string name="app_preferences_general_configuration_category">General configuration</string>
    <string name="app_preferences_category_of_alerts">Category of alerts</string>
    <string name="number_of_alerts_preference_title">Number of alerts</string>
    <string name="number_of_alerts_preference_summary">Number of alerts to be displayed on the home screen</string>
    <string name="age_of_alerts_preference_title">Age of alerts</string>
    <string name="age_of_alerts_preference_summary">Age of alerts to show on the home screen</string>
    <string name="enable_push_notifications_preference_title">Enable push notifications</string>
    <string name="enable_push_notifications_preference_summary">Enable remote notifications for all devices in your account.</string>
    <string name="remove_alerts_every_preference_title">Remove Alerts Every</string>
    <string name="remove_alerts_every_preference_summary">Age of alerts to show on the home screen</string>
    <string name="all_alert_categories_title">All alert categories</string>
    <string name="all_alert_categories_summary">Enable all alert categories</string>
    <string name="success_alerts_title">Success alerts</string>
    <string name="success_alerts_summary">Enable alerts to report on successful operations</string>
    <string name="information_alerts_title">Information Alerts</string>
    <string name="information_alerts_summary">Enable alerts to report on informative operations</string>
    <string name="warning_alerts_title">Warning Alerts</string>
    <string name="warning_alerts_summary">Enable alerts to report on warning operations</string>
    <string name="danger_alerts_title">Danger Alerts</string>
    <string name="danger_alerts_summary">Enable alerts to report on danger operations</string>
    <string name="close_dialog">I understood</string>
    <string name="facebook_brand_title">Facebook</string>
    <string name="age_of_comments_preference_title">Age of Comments</string>
    <string name="age_of_comments_preference_summary">Age of extracted comments</string>
    <string name="app_preferences_social_media_comments">Comments Social Media</string>
    <string name="all_social_media_categories_title">Enable all social media</string>
    <string name="all_social_media_categories_summary">See comments for all social media</string>
    <string name="facebook_social_media_title">Facebook</string>
    <string name="facebook_social_media_summary">See comments extracted from facebook</string>
    <string name="instagram_social_media_title">Instagram</string>
    <string name="instagram_social_media_summary">See comments extracted from instagram</string>
    <string name="youtube_social_media_title">Youtube</string>
    <string name="youtube_social_media_summary">See comments extracted from Youtube</string>
    <string name="enable_dimensions_filter_title">Enable dimensions filter</string>
    <string name="enable_dimensions_filter_summary">Filter comments by dimensions</string>
    <string name="all_comments_dimension_title">Enable all dimensions</string>
    <string name="all_comments_dimension_summary">See comments that give positive in the four dimensions</string>
    <string name="violence_comment_dimension_title">Violence</string>
    <string name="violence_comment_dimension_summary">See violent comments</string>
    <string name="drugs_comment_dimension_title">Drugs</string>
    <string name="drugs_comment_dimension_summary">See comments related to drugs</string>
    <string name="sex_comment_dimension_title">Sex</string>
    <string name="sex_comment_dimension_summary">See comments related to adult content</string>
    <string name="bullying_comment_dimension_title">Bullying</string>
    <string name="bullying_comment_dimension_summary">See comments related to Bullying</string>
    <string name="app_preferences_comment_dimension">
        Dimension of comments
    </string>
    <string name="age_of_relations_preference_title">Age of Relations</string>
    <string name="age_of_relations_preference_summary">Antiquity of the relations that are shown</string>
    <string name="family_locator_title">Family Locator</string>
    <string name="family_locator_content_text">The family locator will allow you to visualize the current position of your child. You can also configure supervised areas (Geofences) to receive alerts when the child enters or leaves the area</string>
</resources>