<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- General Configuration -->
    <android.support.v7.preference.PreferenceCategory
        android:title="@string/app_preferences_general_configuration_category"
        android:layout="@layout/preferences_category_layout">

        <!-- Number of alerts -->
        <android.support.v7.preference.ListPreference
            android:key="number_of_alerts"
            android:title="@string/number_of_alerts_preference_title"
            android:summary="@string/number_of_alerts_preference_summary"
            android:entries="@array/number_of_alerts"
            android:layout="@layout/common_list_item_preference_layout"
            android:entryValues="@array/number_of_alerts_values"
            android:defaultValue="@integer/number_of_alerts_default_value"/>

        <!-- Age of alerts -->
        <android.support.v7.preference.ListPreference
            android:key="age_of_alerts"
            android:title="@string/age_of_alerts_preference_title"
            android:summary="@string/age_of_alerts_preference_summary"
            android:entries="@array/age_of_alerts"
            android:layout="@layout/common_list_item_preference_layout"
            android:entryValues="@array/age_of_alerts_values"
            android:defaultValue="@integer/age_of_alerts_default_value"/>

        <!-- Push Notifications -->
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="enable_push_notifications"
            android:title="@string/enable_push_notifications_preference_title"
            android:summary="@string/enable_push_notifications_preference_summary"
            android:layout="@layout/preference_switch_layout"
            android:widgetLayout="@layout/preference_widget_switch_layout" />

        <!-- Remove Alerts Every -->
        <android.support.v7.preference.ListPreference
            android:key="remove_alerts_every"
            android:title="@string/remove_alerts_every_preference_title"
            android:summary="@string/remove_alerts_every_preference_summary"
            android:entries="@array/remove_alerts_every"
            android:layout="@layout/common_list_item_preference_layout"
            android:entryValues="@array/remove_alerts_every_values"
            android:defaultValue="@integer/remove_alerts_every_default_value" />

    </android.support.v7.preference.PreferenceCategory>

    <!-- Category of Alerts -->
    <android.support.v7.preference.PreferenceCategory
        android:title="@string/app_preferences_category_of_alerts"
        android:layout="@layout/preferences_category_layout">


        <!-- Enable All Alert Categories -->
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="enable_all_alert_categories"
            android:title="@string/all_alert_categories_title"
            android:summary="@string/all_alert_categories_summary"
            android:layout="@layout/preference_switch_layout"
            android:widgetLayout="@layout/preference_widget_switch_layout" />


        <!-- Success alerts -->
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:enabled="false"
            android:key="enable_success_alerts"
            android:title="@string/success_alerts_title"
            android:summary="@string/success_alerts_summary"
            android:layout="@layout/preference_success_alert_layout"
            android:widgetLayout="@layout/preference_widget_switch_layout" />

        <!-- Information alerts -->
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:enabled="false"
            android:key="enable_information_alerts"
            android:title="@string/information_alerts_title"
            android:summary="@string/information_alerts_summary"
            android:layout="@layout/preference_informative_alert_layout"
            android:widgetLayout="@layout/preference_widget_switch_layout" />

        <!-- Warning alerts -->
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:enabled="false"
            android:key="enable_warning_alerts"
            android:title="@string/warning_alerts_title"
            android:summary="@string/warning_alerts_summary"
            android:layout="@layout/preference_warning_alert_layout"
            android:widgetLayout="@layout/preference_widget_switch_layout" />

        <!-- Danger alerts -->
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:enabled="false"
            android:key="enable_danger_alerts"
            android:title="@string/danger_alerts_title"
            android:summary="@string/danger_alerts_summary"
            android:layout="@layout/preference_danger_alert_layout"
            android:widgetLayout="@layout/preference_widget_switch_layout" />



    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>